Fixed too wide image overflowing in search suggest

--- a/src/seplis/web/static/app/components/Search.scss
+++ b/src/seplis/web/static/app/components/Search.scss
@@ -46,6 +46,7 @@
             }
             .img {
                 width: 68px; 
+                overflow: hidden;
             }
             .title {
                 color: #fff;
